[package]
name = "raf"
version = "0.0.0"
authors = ["hardliner66 <hardliner66@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
serde = { version = "1.0.123", features = ["derive"] }
async-trait = "0.1.42"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }

[features]
default = []
bounded = []
